# voxxy

./: .dockerignore  .env.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.engines.yml  compose.yml  init.sql  mise.toml  pyproject.toml
.agents/skills/: google-agent-skills
.agents/skills/knowledge/: confidence-tiers.md
.agents/skills/shared/: health-check.md
.agents/skills/skf-analyze-source/steps-c/: step-01-init.md  step-02-scan-project.md  step-03-identify-units.md
.agents/skills/skf-audit-skill/assets/: drift-report-template.md
.agents/skills/skf-audit-skill/steps-c/: step-02-re-index.md  step-06-report.md
.agents/skills/skf-create-skill/steps-c/: step-04-enrich.md  step-05-compile.md
.agents/skills/skf-create-stack-skill/steps-c/: step-03-rank-and-confirm.md
.agents/skills/skf-drop-skill/steps-c/: step-01-select.md  step-02-execute.md  step-04-health-check.md
.agents/skills/skf-export-skill/: SKILL.md
.agents/skills/skf-export-skill/steps-c/: step-04-update-context.md  step-05-token-report.md
.agents/skills/skf-quick-skill/assets/: skill-template.md
.agents/skills/skf-quick-skill/steps-c/: step-03-quick-extract.md  step-06-write.md
.agents/skills/skf-rename-skill/steps-c/: step-02-execute.md
.agents/skills/skf-setup/: SKILL.md
.agents/skills/skf-setup/steps-c/: step-01-detect-and-tier.md  step-04-report.md
.agents/skills/skf-test-skill/references/: source-access-protocol.md
.agents/skills/skf-test-skill/steps-c/: step-02-detect-mode.md  step-05-score.md  step-07-health-check.md
.agents/skills/skf-verify-stack/references/: coverage-patterns.md
.agents/skills/skf-verify-stack/steps-c/: step-02-coverage.md  step-06-report.md
.augment/skills/knowledge/: agentskills-spec.md  architecture-verification.md  ccc-bridge.md  manual-section-integrity.md  skf-knowledge-index.csv  tool-resolution.md  zero-hallucination.md
.augment/skills/shared/scripts/: skf-manifest-ops.py  skf-rebuild-managed-sections.py  skf-severity-classify.py  skf-validate-output.py
.augment/skills/skf-analyze-source/steps-c/: step-04-map-and-detect.md
.augment/skills/skf-audit-skill/references/: severity-rules.md
.augment/skills/skf-brief-skill/: SKILL.md
.augment/skills/skf-create-skill/assets/: skill-sections.md
.augment/skills/skf-create-skill/steps-c/: step-03-extract.md  step-07-generate-artifacts.md  step-08-report.md
.augment/skills/skf-create-stack-skill/assets/: stack-skill-template.md
.augment/skills/skf-create-stack-skill/steps-c/: step-09-report.md
.augment/skills/skf-forger/: SKILL.md
.augment/skills/skf-quick-skill/steps-c/: step-02-ecosystem-check.md
.augment/skills/skf-refine-architecture/steps-c/: step-01-init.md
.augment/skills/skf-setup/steps-c/: step-02-write-config.md
.augment/skills/skf-test-skill/steps-c/: step-04b-external-validators.md
.gemini/skills/knowledge/: version-paths.md
.gemini/skills/skf-audit-skill/: SKILL.md
.gemini/skills/skf-refine-architecture/: SKILL.md
.gemini/skills/skf-rename-skill/: SKILL.md
.gemini/skills/skf-verify-stack/: SKILL.md
.github/skills/knowledge/: qmd-registry.md
.github/skills/skf-drop-skill/: SKILL.md
.github/skills/skf-update-skill/: SKILL.md
.opencode/skills/knowledge/: doc-fetcher.md  progressive-capability.md  skill-lifecycle.md  split-body-strategy.md
.opencode/skills/skf-analyze-source/: SKILL.md
.opencode/skills/skf-create-skill/: SKILL.md
.opencode/skills/skf-quick-skill/: SKILL.md
_bmad/_config/: skf-manifest.yaml
_bmad/skf/: config.yaml  module-help.csv  module.yaml
_bmad/skf/knowledge/: overview.md  provenance-tracking.md
_bmad/skf/skf-create-stack-skill/: SKILL.md
_bmad/skf/skf-test-skill/: SKILL.md
_skf-learn/: agents.md  architecture.md  bmad-synergy.md  concepts.md  examples.md  getting-started.md  how-it-works.md  index.md  skill-model.md  troubleshooting.md  verifying-a-skill.md  why-skf.md  workflows.md
_skf-learn/_data/: pinned.yaml
_skf-learn/_internal/: RELEASING.md  STABILITY.md
app/: audio.py  cache.py  engines.py  main.py  synth.py  voices.py
cli/: README.md  pyproject.toml
cli/tests/: conftest.py  test_audio_argv.py  test_config.py  test_engine_reorder.py  test_speak_ssh.py  test_state.py
cli/voxxy/: __init__.py  __main__.py  app.py  audio.py  client.py  config.py  docker.py  errors.py  state.py
cli/voxxy/commands/: daemon.py  engine.py  speak.py  util.py  voice.py
docs/: monetization-strategy.md
docs/runbooks/: smoketest-engine-swap.md
docs/specs/: engine-decoupling.md  engine-decoupling.plan.md  voxxy-cli.md  voxxy-cli.plan.md
engines/vibevoice/: Dockerfile  README.md  pyproject.toml
engines/vibevoice/engine/: contract.py  main.py  synth.py
engines/voxcpm/: Dockerfile  README.md  pyproject.toml
engines/voxcpm/engine/: main.py
migrations/: 001_elevenlabs_mapping.sql  002_engine_mapping.sql
node-red-contrib-vox/: README.md  package.json  vox-tts.html  vox-tts.js
scripts/: fake-engine.py  verify-engine-contract.sh  vox-speak
(+105 files in other folders)
